- use records for DTOs - use services in mappers - simplify isBlank check